--- a/index.html
+++ b/index.html
@@ -734,14 +734,14 @@ Driven by a passion for automation, performance, and continuous improvement.
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category=Linux, Bash Scripting>
-              <a href="https://cloudlabs.ai/">
+              <a href="./assets/images/shell.png">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/shell.png" alt="finance" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Shell Script for User Management and Backup
