--- a/index.html
+++ b/index.html
@@ -791,14 +791,14 @@ in Linux</h3>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="Automation Testing">
-              <a href="#">
+              <a href="./assets/images/docker.png">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/docker.png" alt="brawlhalla" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">DevSecOps Jenkins CI/CD Pipeline for a
@@ -811,14 +811,14 @@ Node.js Application
             </li>
 
             <li class="project-item  active" data-filter-item data-category="Manual and Api Testing">
-              <a href="#">
+              <a href="./assets/images/k8s.png">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
+                  <img src="./assets/images/k8s.png" alt="dsm." loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Deployment of a Three-Tier Application on
