--- a/index.html
+++ b/index.html
@@ -753,14 +753,14 @@ in Linux</h3>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="Api and Automation Testing">
-              <a href="https://cspcontrolcenter.com/">
+              <a href="./assets/images/two.png">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/two.png" alt="orizon" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Containerization of a Two-Tier Application using Docker, Docker
