Replace Docker image with CI/CD image in index.htmlchanges

--- a/index.html
+++ b/index.html
@@ -791,14 +791,14 @@ in Linux</h3>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="Automation Testing">
-              <a href="./assets/images/docker.png">
+              <a href="./assets/images/cicdmain.png">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/docker.png" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/cicdmain.png" alt="brawlhalla" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">DevSecOps Jenkins CI/CD Pipeline for a
