--- a/index.html
+++ b/index.html
@@ -540,30 +540,28 @@ Driven by a passion for automation, performance, and continuous improvement.
 
               <h4 class="h4 timeline-item-title">TechMET IT Solutions, Nashik</h4>
 
-              <span>DevOps Engineer</span>
+              <span>DevOps Intern</span>
               <span>2025 — Present</span>
 
               <p class="timeline-text">
-                1. Manage Linux servers, write Bash scripts, and automate routine tasks to improve operational efficiency.<br>
-    2. Build, manage, and deploy applications using Docker containers and Kubernetes clusters for scalability and high availability.<br>
-3. Design, implement, and maintain CI/CD pipelines using Jenkins and GitLab CI/CD for automated and reliable deployments.<br>
-4. Provision, configure, and manage AWS cloud resources (EC2, S3, EKS, IAM, CloudWatch) to support production and development environments.<br>
-5. Implement monitoring, logging, and performance optimization using tools like Prometheus and Grafana to ensure system reliability.
-6. Maintain documentation, troubleshoot issues, and continuously improve deployment and operational processes.<br>
+                1. Maintained and monitored CI/CD pipelines using Jenkins for smooth, automated deployments.<br>
+                2. Worked with developers to fix pipeline issues and improve build reliability.<br>
+                3. Managed source code with Git and followed effective branching strategies.<br>
+                4. Monitored logs and build jobs, notifying developers of issues for quick resolution.<br>
               </p>
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">EPCPROMAN PRIVATE LIMITED , Mumbai</h4>
+              <h4 class="h4 timeline-item-title">TrainWithShubham  , Pune</h4>
 
-              <span>Test Engineer</span>
-              <span>2024 — 2025</span>
+              <span>DevOps Traineer</span>
+              <span>Oct'2024 — Jan'2025</span>
 
               <p class="timeline-text">
-             1. Skilled in both Manual and Automation Testing for web, mobile, and API-based applications.<br>
-2. Designs test plans, writes detailed test cases, and tracks bugs using tools like JIRA.<br>
-3. Focused on delivering high-quality, scalable, and bug-free software with every sprint.<br>
+             1. Key Tools & Technologies:
+AWS | Linux | Docker | Jenkins | GitLab CI/CD | Kubernetes | Terraform | Ansible | Grafana | Prometheus.<br>
+
 
 
               </p>
