--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@ Driven by a passion for automation, performance, and continuous improvement.
               <h4 class="h4 timeline-item-title">TechMET IT Solutions, Nashik</h4>
 
               <span>DevOps Intern</span>
-              <span>2025 — Present</span>
+              <span>Feb'2025 — Present</span>
 
               <p class="timeline-text">
                 1. Maintained and monitored CI/CD pipelines using Jenkins for smooth, automated deployments.<br>
@@ -559,7 +559,7 @@ Driven by a passion for automation, performance, and continuous improvement.
               <span>Oct'2024 — Jan'2025</span>
 
               <p class="timeline-text">
-             1. Key Tools & Technologies:
+              Key Tools & Technologies:
 AWS | Linux | Docker | Jenkins | GitLab CI/CD | Kubernetes | Terraform | Ansible | Grafana | Prometheus.<br>
 
 
