Update project image source in index.html

--- a/index.html
+++ b/index.html
@@ -779,14 +779,14 @@ Node.js Application
             </li>
 
             <li class="project-item  active" data-filter-item data-category="Manual and Api Testing">
-              <a href="./assets/images/k8s.png">
+              <a href="./assets/images/Screenshot (246).png">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/k8s.png" alt="dsm." loading="lazy">
+                  <img src="./assets/images/Screenshot (246).png" alt="dsm." loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Deployment of a Three-Tier Application on
