--- a/index.html
+++ b/index.html
@@ -526,8 +526,8 @@ Driven by a passion for automation, performance, and continuous improvement.
 
               <h4 class="h4 timeline-item-title">TechMET IT Solutions, Nashik</h4>
 
-              <span> DevOps Intern </span>
-              <span>May'2025 — Present</span>
+              <span> Junior DevOps Engineer </span>
+              <span> Oct'2024 — Present</span>
 
               <p class="timeline-text">
                 1. Maintained and monitored CI/CD pipelines using Jenkins for smooth, automated deployments.<br>
