Update job title from DevOps Intern to Junior DevOps Engineergg

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@ Driven by a passion for automation, performance, and continuous improvement.
 
               <h4 class="h4 timeline-item-title">TechMET IT Solutions, Nashik</h4>
 
-              <span> DevOps Intern </span>
+              <span> Junior DevOps Engineer </span>
               <span> May'2025 — Present</span>
 
               <p class="timeline-text">
